Refactor and add small features

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
 coverage
 docstring-expander
 jupyterlab
-lmfit
-matplotlib
-nose
+nose2
 numpy
 pandas
 pip>20
 pylint
 python-libsbml
-seaborn
+sphinx
 tellurium
-tk
 twine
 urllib3
